# openduck

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build_extension.sh  mydb
.github/workflows/: ci.yml  fuse-e2e-manual.yml
clients/python/: README.md  pyproject.toml
clients/python/openduck/: __init__.py  main.py  utils.py
crates/diff-blob/: Cargo.toml
crates/diff-blob/src/: lib.rs
crates/diff-bridge/: Cargo.toml
crates/diff-bridge/src/: lib.rs
crates/diff-bridge/tests/: bridge_smoke.rs
crates/diff-core/: Cargo.toml
crates/diff-core/benches/: seal_read.rs
crates/diff-core/src/: error.rs  lib.rs  memory.rs
crates/diff-fuse/: Cargo.toml
crates/diff-fuse/src/: lib.rs  linux.rs  other.rs
crates/diff-layer-fs/: Cargo.toml
crates/diff-layer-fs/src/: lib.rs
crates/diff-metadata/: Cargo.toml
crates/diff-metadata/migrations/: 20250330120000_init.sql  20250330120001_extent_created_unique_active.sql  20250330120002_layer_refcount_gc.sql
crates/diff-metadata/src/: error.rs  gc.rs  lib.rs  pg.rs  pg_storage.rs
crates/diff-metadata/tests/: pg_storage_backend.rs
crates/exec-gateway/: Cargo.toml
crates/exec-gateway/src/: hybrid.rs  lib.rs  main.rs
crates/exec-gateway/tests/: edge_cases.rs  gateway_worker_roundtrip.rs  grpc_smoke.rs  hybrid_join_baseline.rs
crates/exec-proto/: Cargo.toml  build.rs
crates/exec-proto/src/: auth.rs  lib.rs
crates/exec-worker/: Cargo.toml
crates/exec-worker/benches/: query_latency.rs
crates/exec-worker/src/: lib.rs  main.rs
crates/exec-worker/tests/: ducklake_smoke.rs
crates/openduck-cli/: Cargo.toml  README.md
crates/openduck-cli/src/: main.rs
crates/openduck-metrics/: Cargo.toml
crates/openduck-metrics/src/: lib.rs
docker/: Dockerfile  docker-compose.full.yml  docker-compose.yml
examples/: .env.example  Cargo.toml  README.md  bridge_storage.rs  client_cli.sh  client_node.mjs  client_python.py  compute_pushdown.rs  dev_stack.sh  diff_storage_demo.rs  fuse_concept.rs  fuse_duckdb.sh  grpc_roundtrip.rs  hybrid_plan.rs  secrets_and_storage.rs  snapshot_reads.rs  worker_custom.rs
examples/python/: client_python.py  duckdb_sdk_ducklake.py
examples/rust/: bridge_storage.rs  client_rust.rs  federation_provider.rs  gc_walkthrough.rs  grpc_roundtrip.rs  hybrid_execution.rs  snapshot_reads.rs  storage_backend.rs  worker_custom.rs  worker_registration.rs
extensions/openduck/: CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
extensions/openduck/.cache/clangd/: compile_commands.json
extensions/openduck/.cache/clangd/debug/: compile_commands.json
extensions/openduck/.github/workflows/: MainDistributionPipeline.yml
extensions/openduck/src/: arrow_bridge.cpp  grpc_client.cpp  openduck_catalog.cpp  openduck_extension.cpp  openduck_filesystem.cpp  openduck_schema.cpp  openduck_table_entry.cpp
extensions/openduck/src/include/: arrow_bridge.hpp  grpc_client.hpp  openduck_bridge.h  openduck_catalog.hpp  openduck_extension.hpp  openduck_filesystem.hpp  openduck_schema.hpp  openduck_table_entry.hpp
extensions/openduck/test/cpp/: CMakeLists.txt  test_arrow_bridge.cpp
extensions/openduck/test/sql/: openduck.test  openduck_edge_cases.test  openduck_secrets.test  openduck_unavailable.test
proto/openduck/v1/: README.md  execution.proto
scripts/: e2e_fuse_snapshot_linux.sh
