[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openduck"
version = "0.1.0"
description = "Python client for OpenDuck — connect DuckDB to any OpenDuck-compatible remote"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["duckdb>=1.0"]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/openduck/openduck"
