[package]
name = "diff-fuse"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "openduck-fuse"
autobins = false

[dependencies]
diff-core = { path = "../diff-core" }
diff-metadata = { path = "../diff-metadata" }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
libc.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
tokio.workspace = true
sqlx.workspace = true
uuid.workspace = true

[[bin]]
name = "openduck-fuse"
path = "src/bin/openduck_fuse.rs"

[target.'cfg(target_os = "linux")'.dependencies]
fuser.workspace = true
