[package]
name = "diff-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
diff-core = { path = "../diff-core" }
diff-layer-fs = { path = "../diff-layer-fs" }
diff-blob = { path = "../diff-blob" }
openduck-metrics = { path = "../openduck-metrics" }
object_store.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
