[package]
name = "exec-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "openduck-gateway"
path = "src/main.rs"

[dependencies]
exec-proto = { path = "../exec-proto" }
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
arrow = { version = "58", default-features = false, features = ["ipc"] }
duckdb = { version = "1.10501", features = ["bundled", "appender-arrow"] }

[dev-dependencies]
exec-worker = { path = "../exec-worker" }
